--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,6 @@
   <link rel="stylesheet" href="./styles/pad.css" type="text/css" media="(min-width:768px)">
   <link rel="stylesheet" href="./styles/pc.css" type="text/css" media="(min-width:1180px)">
   <!-- <link rel="stylesheet" href="./styles/pc-w.css" type="text/css" media="(min-width:1200px)"> -->
-  <script src="./scripts/min.js"></script>
 </head>
 <body>
   <!-- 导航栏 start -->
@@ -27,14 +26,14 @@
       <ul></ul>
       <!-- 切换栏 -->
       <ul class="nav_r fr clearfix">
-        <li><a data-hover="首页" href="#home" class="current">首页</a></li>
-        <li><a data-hover="关于" href="#about">关于</a></li>
-        <li><a data-hover="技能" href="#skill">技能</a></li>
-        <li><a data-hover="经历" href="#exp">经历</a></li>
-        <li><a data-hover="作品" href="#works">作品</a></li>
-        <li><a data-hover="项目介绍" href="#project">项目介绍</a></li>
-        <li><a data-hover="联系我" href="#contact">联系我</a></li>
-        <li>
+        <li class="roll current"><a data-hover="首页" href="#home">首页</a></li>
+        <li class="roll"><a data-hover="关于" href="#about">关于</a></li>
+        <li class="roll"><a data-hover="技能" href="#skill">技能</a></li>
+        <li class="roll"><a data-hover="经历" href="#exp">经历</a></li>
+        <li class="roll"><a data-hover="作品" href="#works">作品</a></li>
+        <li class="roll"><a data-hover="项目介绍" href="#project">项目介绍</a></li>
+        <li class="roll"><a data-hover="联系我" href="#contact">联系我</a></li>
+        <li class="playStop">
           <ul class="play clearfix">
             <span></span>
             <span></span>
@@ -97,3 +96,4 @@
   <!-- 版权 end -->
 </body>
 </html>
+  <script src="./scripts/min.js"></script>
