--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,8 @@
   <link rel="shortcut icon" href="./icon.ico" type="x-icon">
   <link rel="stylesheet" href="./styles/reset.css" type="text/css">
   <link rel="stylesheet" href="./styles/common.css" type="text/css">
-  <link rel="stylesheet" href="./styles/pad.css" type="text/css" media="(min-width:768px)">
+  <link rel="stylesheet" href="./styles/phone.css" type="text/css" media="(min-width:320px)">
+  <link rel="stylesheet" href="./styles/pad.css" type="text/css" media="(min-width:770px)">
   <link rel="stylesheet" href="./styles/pc.css" type="text/css" media="(min-width:1180px)">
   <!-- <link rel="stylesheet" href="./styles/pc-w.css" type="text/css" media="(min-width:1200px)"> -->
 </head>
@@ -23,7 +24,11 @@
         <li>ANKEUNG</li>
       </ul>
       <!-- 手机端 按钮 -->
-      <ul></ul>
+      <ul class="phone">
+        <span></span>
+        <span></span>
+        <span></span>
+      </ul>
       <!-- 切换栏 -->
       <ul class="nav_r fr clearfix">
         <li class="roll current"><a data-hover="首页" href="#home">首页</a></li>
