--- a/src/index.html
+++ b/src/index.html
@@ -69,7 +69,40 @@
   <!-- 回到顶部 end -->
 
   <!-- 头部名片 start -->
-  <main id="home"></main>
+  <main id="home">
+    <div class="center clearfix">
+      <ul class="fl">
+        <dl>
+          <dt>HI!</dt>
+          <dd>UI&nbsp;&&nbsp;WEB&nbsp;DEVELOPMENT</dd>
+        </dl>
+        <span></span>
+        <dl>
+          <dd>
+            <strong>NAME</strong><em>ManKeung</em>
+          </dd>
+          <dd>
+            <strong>D.O.B</strong><em>11-10-1991</em>
+          </dd>
+          <dd>
+            <strong>PHONE</strong><em>15170132937</em>
+          </dd>
+          <dd>
+            <strong>ADDRESS</strong><em>成都市&nbsp;-&nbsp;双流区&nbsp;-&nbsp;天府大道南段1167号</em>
+          </dd>
+          <dd>
+            <strong>E-MAIL</strong><em><a href="mailto:mankeung1011@gmail.com?subject=Hr邮件&body=Hi,%20ManKeung:">mankeung1011@gmail.com</a></em>
+          </dd>
+          <dd>
+            <strong>WEBSITE</strong><em><a href="#">www.mkimq.com</a></em>
+          </dd>
+        </dl>
+      </ul>
+      <ul class="fr">
+        <li class="fr"></li>
+      </ul>
+    </div>
+  </main>
   <!-- 头部名片 end -->
 
   <!-- 关于 start -->
