--- a/src/index.html
+++ b/src/index.html
@@ -85,7 +85,7 @@
             <strong>D.O.B</strong><em>11-10-1991</em>
           </dd>
           <dd>
-            <strong>PHONE</strong><em>15170132937</em>
+            <strong>PHONE</strong><em><a href="tel:15170132937">15170132937</a></em>
           </dd>
           <dd>
             <strong>ADDRESS</strong><em>成都市&nbsp;-&nbsp;双流区&nbsp;-&nbsp;天府大道南段1167号</em>
@@ -106,7 +106,45 @@
   <!-- 头部名片 end -->
 
   <!-- 关于 start -->
-  <main id="about"></main>
+  <main id="about" class="clearfix">
+    <div class="fr about_r">
+      <ul>
+        <li>
+          <dl>
+            <dt>
+              <span>Hi&nbsp;i'm&nbsp;</span><span>Mankeung</span>
+            </dt>
+            <dd>1.熟练掌握PS、AI等设计软件；2.能独立完成网站排版设计；3.熟悉CSS预处理语言SASS，会HTML5+CSS3、JavaScript、JQuery和Nodejs等前端网页布局技术；4.熟悉掌握前端主流框架，例如：bootstrap、vue...；4.Git+Gulp开发环境。</dd>
+          </dl>
+          <dl><span class="button_l">作&nbsp;&nbsp;品</span><span class="button_r">关&nbsp;&nbsp;注</span></dl>
+        </li>
+        <li>
+          <dl>
+            <dt>
+              <span>Hi&nbsp;i'm&nbsp;</span><span>Mankeung</span>
+            </dt>
+            <dd>1.熟练掌握PS、AI等设计软件；2.能独立完成网站排版设计；3.熟悉CSS预处理语言SASS，会HTML5+CSS3、JavaScript、JQuery和Nodejs等前端网页布局技术；4.熟悉掌握前端主流框架，例如：bootstrap、vue...；4.Git+Gulp开发环境。</dd>
+          </dl>
+          <dl><span class="button_l">作&nbsp;&nbsp;品</span><span class="button_r">关&nbsp;&nbsp;注</span></dl>
+        </li>
+        <li>
+          <dl>
+            <dt>
+              <span>Hi&nbsp;i'm&nbsp;</span><span>Mankeung</span>
+            </dt>
+            <dd>1.熟练掌握PS、AI等设计软件；2.能独立完成网站排版设计；3.熟悉CSS预处理语言SASS，会HTML5+CSS3、JavaScript、JQuery和Nodejs等前端网页布局技术；4.熟悉掌握前端主流框架，例如：bootstrap、vue...；4.Git+Gulp开发环境。</dd>
+          </dl>
+          <dl><span class="button_l">作&nbsp;&nbsp;品</span><span class="button_r">关&nbsp;&nbsp;注</span></dl>
+        </li>
+      </ul>
+      <ul>
+        <li class="active"></li>
+        <li></li>
+        <li></li>
+      </ul>
+    </div>
+    <div class="fr about_l"></div>
+  </main>
   <!-- 关于 end -->
 
   <!-- 技能 start -->
