--- a/src/index.html
+++ b/src/index.html
@@ -112,27 +112,27 @@
         <li>
           <dl>
             <dt>
-              <span>Hi&nbsp;i'm&nbsp;</span><span>Mankeung</span>
+              <span>Hi&nbsp;I'm&nbsp;</span><span>Mankeung</span>
             </dt>
-            <dd>1.熟练掌握PS、AI等设计软件；2.能独立完成网站排版设计；3.熟悉CSS预处理语言SASS，会HTML5+CSS3、JavaScript、JQuery和Nodejs等前端网页布局技术；4.熟悉掌握前端主流框架，例如：bootstrap、vue...；4.Git+Gulp开发环境。</dd>
+            <dd>1.&nbsp;熟练使用PS、AI等设计软件；2.&nbsp;能独立完成网站排版设计；3.&nbsp;熟悉CSS预处理语言SASS，能使用HTML5+CSS3、JavaScript、JQuery、Ajax、SQL和Nodejs等前端技术对设计图高度还原；4.&nbsp;会使用VUE进行数据双向绑定及单页面开发；4.&nbsp;会Git、Gulp、webpack对项目开发及版本管理。</dd>
           </dl>
           <dl><span class="button_l">作&nbsp;&nbsp;品</span><span class="button_r">关&nbsp;&nbsp;注</span></dl>
         </li>
         <li>
           <dl>
             <dt>
-              <span>Hi&nbsp;i'm&nbsp;</span><span>Mankeung</span>
+              <span>Hi&nbsp;I'm&nbsp;</span><span>Mankeung</span>
             </dt>
-            <dd>1.熟练掌握PS、AI等设计软件；2.能独立完成网站排版设计；3.熟悉CSS预处理语言SASS，会HTML5+CSS3、JavaScript、JQuery和Nodejs等前端网页布局技术；4.熟悉掌握前端主流框架，例如：bootstrap、vue...；4.Git+Gulp开发环境。</dd>
+            <dd>1.&nbsp;企业招聘宣传DM单、X展架、企业文化墙以及公司宣传平面设计；2.&nbsp;北川羌语学习系统界面改版调整；3.&nbsp成华公安扁平化系统，界面设计，并做相应前端代码编写；4.&nbsp;如：“超融合”、“队伍管理系统”和“雪亮工程”，界面设计以及部分前端代码编写。</dd>
           </dl>
           <dl><span class="button_l">作&nbsp;&nbsp;品</span><span class="button_r">关&nbsp;&nbsp;注</span></dl>
         </li>
         <li>
           <dl>
             <dt>
-              <span>Hi&nbsp;i'm&nbsp;</span><span>Mankeung</span>
+              <span>Hi&nbsp;I'm&nbsp;</span><span>Mankeung</span>
             </dt>
-            <dd>1.熟练掌握PS、AI等设计软件；2.能独立完成网站排版设计；3.熟悉CSS预处理语言SASS，会HTML5+CSS3、JavaScript、JQuery和Nodejs等前端网页布局技术；4.熟悉掌握前端主流框架，例如：bootstrap、vue...；4.Git+Gulp开发环境。</dd>
+            <dd>1.&nbsp;积极、乐观，务实，不断学习，奋进；2.&nbsp;对工作持积极认真，为人诚恳、细心、乐观，有良好的团队精神，能快速适应工作环境，并能在工作中不断学习，不断完善自己；3.&nbsp;不管工作还是生活遇到困难都不可怕，解决一个个问题的时候才是最享受的过程。</dd>
           </dl>
           <dl><span class="button_l">作&nbsp;&nbsp;品</span><span class="button_r">关&nbsp;&nbsp;注</span></dl>
         </li>
@@ -148,7 +148,47 @@
   <!-- 关于 end -->
 
   <!-- 技能 start -->
-  <main id="skill"></main>
+  <main id="skill">
+    <div>
+      <ul class="title">
+        <li>WHAT&nbsp;I&nbsp;DO</li>
+        <li><span>我的</span><span>技能</span></li>
+        <li></li>
+      </ul>
+      <ul class="clearfix">
+        <li><span class="icon_UI">&#xe60a;</span></li>
+        <li>
+          <dl>
+            <dt>WEB&nbsp;DESIGN</dt>
+            <dd>运用PS、AI等设计工具，完成UI界面设计工作；会制作DM单、宣传册、X展架等平面设计工作。</dd>
+          </dl>
+        </li>
+        <li><span class="icon_UI">&#xe64f;</span></li>
+        <li>
+          <dl>
+            <dt>WEB&nbsp;DEVELOPMENT</dt>
+            <dd>利用HTML5、CSS3、JavaScript前端语言，对页面布局；会css预处理语言，能够利用rem、viewpoint、@media进行响应式及移动端布局。</dd>
+          </dl>
+        </li>
+      </ul>
+      <ul class="clearfix">
+        <li><span class="icon_UI">&#xe8a6;</span></li>
+        <li>
+          <dl>
+            <dt>DEV&nbsp;FRAMEWORK</dt>
+            <dd>熟悉常用前端框架，运用VUE框架进行单页面开发，掌握Ajax、SQL和Nodejs等前端技术。</dd>
+          </dl>
+        </li>
+        <li><span class="icon_UI">&#xe675;</span></li>
+        <li>
+          <dl>
+            <dt>DEV&nbsp;AUTOMATION</dt>
+            <dd>利用git、gulp、webpack工具对项目进行开发，对代码更好的迭代管理。</dd>
+          </dl>
+        </li>
+      </ul>
+    </div>
+  </main>
   <!-- 技能 end -->
 
   <!-- 经历 start -->
