--- a/src/index.html
+++ b/src/index.html
@@ -192,7 +192,77 @@
   <!-- 技能 end -->
 
   <!-- 经历 start -->
-  <main id="exp"></main>
+  <main id="exp">
+    <div>
+      <ul class="title1">
+        <li>WHAT&nbsp;I&nbsp;DID</li>
+        <li><span>我的</span><span>经历</span></li>
+        <li></li>
+      </ul>
+      <div class="exp_big" id="exp-big">
+        <ul class="clearfix">
+          <li class="clearfix">
+            <span>2017</span>
+          </li>
+          <li class="icon_e"></li>
+          <li>
+            <dl>
+              <dt>成都派沃特科技有限公司</dt>
+              <dd>入职的是前端初级工程师，主要职责：DM单、X展架、企业文化墙及其他公司平面设计；各项目组的PC、移动及客户端界面设计，及相关前端代码的编写工作。</dd>
+            </dl>
+          </li>
+        </ul>
+        <ul class="clearfix">
+          <li class="clearfix">
+            <span>2015</span>
+          </li>
+          <li class="icon_e"></li>
+          <li>
+            <dl>
+              <dt>新余市艾文广告设计</dt>
+              <dd>公司主要承从事海报、DM单、X展架、擎天柱等平面设计，我的岗位是设计学徒，在工作过程中积累工作经验，并利用休息时间学习前端知识。</dd>
+            </dl>
+          </li>
+        </ul>
+        <ul class="clearfix">
+          <li class="clearfix">
+            <span>2014</span>
+          </li>
+          <li class="icon_e"></li>
+          <li>
+            <dl>
+              <dt>健鼎（无锡）电子有限公司</dt>
+              <dd>实习期间加入的是“健鼎”，公司主要印刷电路板PCB的研发和生产,是全球汽车板、手机板主要供货商。入职的是物管一科，主要从事的是物品管理工作。</dd>
+            </dl>
+          </li>
+        </ul>
+        <ul class="clearfix">
+          <li class="clearfix">
+            <span>2013</span>
+          </li>
+          <li class="icon_e"></li>
+          <li>
+            <dl>
+              <dt>珠海市科力通电器有限公司</dt>
+              <dd>利用暑假时间，在珠海入职科力通，入职岗位普工，主要职责零件组装，在工作过程中不断磨练自己，加强团队合作精神。</dd>
+            </dl>
+          </li>
+        </ul>
+        <ul class="clearfix">
+          <li class="clearfix">
+            <span>2011</span>
+          </li>
+          <li class="icon_e"></li>
+          <li>
+            <dl>
+              <dt>江西工程学院</dt>
+              <dd>2011年在江西工程学院入学，专业光伏发电，在大学期间开始接触PS、 Dreamweaver等工具，在大学期间学习相关知识，在毕业前同时完成自考本科。</dd>
+            </dl>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </main>
   <!-- 经历 end -->
 
   <!-- 作品 start -->
