--- a/src/index.html
+++ b/src/index.html
@@ -376,7 +376,7 @@
           </li>
         </ul>
         <ul>
-          <form action="#" method="post" onsubmit="return checkFrom()">
+          <form method="post">
             <p class="form_txt">
               <input type="text" name="name" id="name" />
               <label for="name" id="msg-name">Name</label>
